fix tag spacing

--- a/style.css
+++ b/style.css
@@ -403,12 +403,14 @@ input#s {
   color: white;
   display: inline-block;
   font-size: 16px;
+  margin-right: 5px;
   margin-bottom: 10px;
   padding: 1px 10px 2px 10px;
 }
 
 .tag a {
   color: var(--white);
+  display: inline-block;
 }
 
 /* ARCHIVE PAGE */
